Bug 51782 - mesa-8.0.3: fails to compile against uclibc
Summary: mesa-8.0.3: fails to compile against uclibc
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Other (show other bugs)
Version: 8.0
Hardware: All All
: medium normal
Assignee: mesa-dev
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-07-06 04:36 UTC by Anthony G. Basile
Modified: 2012-07-24 20:39 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
Fix compile time errors against uclibc (1.85 KB, patch)
2012-07-06 04:36 UTC, Anthony G. Basile
Details | Splinter Review
Fix compile time errors against uclibc (1.83 KB, patch)
2012-07-24 19:27 UTC, Anthony G. Basile
Details | Splinter Review

Description Anthony G. Basile 2012-07-06 04:36:36 UTC
Created attachment 63883 [details] [review]
Fix compile time errors against uclibc

mesa is mostly okay with uclibc instead of glibc, but 8.0.3 does miss a few checks that fall back on glibc-ism and cause compile time failures.  The following patch fixes this issue.

This was hit in Gentoo on amd64, but would affect all uclibc systems on all arches.  Downstream bug is at

   https://bugs.gentoo.org/show_bug.cgi?id=425042


The attached patch fixes the issue.
Comment 1 Anthony G. Basile 2012-07-24 19:27:33 UTC
Created attachment 64628 [details] [review]
Fix compile time errors against uclibc

This is an improved version of the previous patch. (Thanks to mattst88 downstream).
Comment 2 Kenneth Graunke 2012-07-24 19:42:33 UTC
We've had similar patches in the past, but those got bogged down, trying to rework all the checks to get them right.  This seems like a good incremental change.

Acked-by: Kenneth Graunke <kenneth@whitecape.org>

Matt, do you want to pick this up and commit it?
Comment 3 Matt Turner 2012-07-24 20:01:30 UTC
(In reply to comment #2)
> Matt, do you want to pick this up and commit it?

Pushed as f35e380dd240b418e17a179af73bbab74ceea784.

Anthony, please send git formatted patches in the future.
Comment 4 Anthony G. Basile 2012-07-24 20:39:27 UTC
(In reply to comment #3)
> (In reply to comment #2)
> > Matt, do you want to pick this up and commit it?
> 
> Pushed as f35e380dd240b418e17a179af73bbab74ceea784.
> 
> Anthony, please send git formatted patches in the future.

No problem.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.